High/check-create-binding-privilege-role/.chainsaw-test/rb-bad.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: badrb01
  namespace: test2
subjects:
- kind: ServiceAccount
  name: foo
  namespace: test2
roleRef:
  kind: ClusterRole
  name: check-create-rolebinding-clusterrole
  apiGroup: rbac.authorization.k8s.io
